[gd_scene load_steps=2 format=3 uid="uid://dlo4ejdejrm5t"]

[ext_resource type="Script" path="res://client.gd" id="1_6i6w7"]

[node name="Networking" type="Node2D"]
script = ExtResource("1_6i6w7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 94.0
offset_bottom = 66.0

[node name="Connect" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Connect"

[node name="Disconnect" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Disconnect"

[node name="ID" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Update"

[node name="ConnectionTimeOut" type="Timer" parent="."]
wait_time = 5.0

[connection signal="button_up" from="CanvasLayer/VBoxContainer/Connect" to="." method="_on_connect_button_up"]
[connection signal="button_up" from="CanvasLayer/VBoxContainer/Disconnect" to="." method="_on_disconnect_button_up"]
[connection signal="timeout" from="ConnectionTimeOut" to="." method="_on_connection_time_out_timeout"]
